[package]
name = "lanton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22.0", features = ["full"] }
chrono = { version = "0.4.22", features= ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Only to test something
bytes = "1.0.0"
futures = { version = "0.3.0", features = ["thread-pool"]}
tokio-util = { version = "0.7.0", features = ["full"] }


[[bin]]
name = "lanton"
path = "src/main.rs"

